--- a/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
@@ -7,7 +7,7 @@
     <div class="row index-page-margin">
         <p class="col col-md-2"></p>
         <p class="page-header col col-md-10">Ansökningar</p>
-        <nl class="col col-md-offset-2 font-size-12">Vård- och omsorgsförvaltningen i Helsingborgs kommun</nl>
+        @*<nl class="col col-md-offset-2 font-size-12">Vård- och omsorgsförvaltningen i Helsingborgs kommun</nl>*@
     </div>
 
     <br />
@@ -51,7 +51,9 @@
                     {
                         <tr>
                             <td>
-                                @Html.DisplayFor(modelItem => item.ReferenceNumber)
+                                <a target="_blank" href="@Url.Action("ShowClaimDetails", "Claims", new { referenceNumber = item.ReferenceNumber })">
+                                    @Html.DisplayFor(modelItem => item.ReferenceNumber)
+                                </a>
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.StatusDate)
@@ -80,7 +82,7 @@
             }
             else
             {
-                <div class="padding-left-no-claim">
+                <div class="padding-left-no-claim font-size-16">
                     Det finns inga avslagna ansökningar.
                 </div>
                 <br />
@@ -207,8 +209,6 @@
                                 <a target="_blank" href="@Url.Action("DecisionBoard", "Claims", new { id = item.Id })">
                                     @Html.DisplayFor(modelItem => item.ReferenceNumber)
                                 </a>
-                                @*@Html.ActionLink(@Html.DisplayFor(modelItem => item.ReferenceNumber), "DecisionBoard", "Claims", new { id = item.Id })*@
-                                @*@Html.DisplayFor(modelItem => item.ReferenceNumber)*@
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.StatusDate)
@@ -246,7 +246,7 @@
             }
             else
             {
-                <div class="padding-left-no-claim">
+                <div class="padding-left-no-claim font-size-16">
                     Det finns inga ansökningar som är under handläggning.
                 </div>
                 <br />
@@ -282,6 +282,9 @@
                         <th class="medium-col">
                             Yrkat belopp (Kr)
                         </th>
+                        <th class="medium-col">
+                            Beslutat belopp (Kr)
+                        </th>
                         <th></th>
                     </tr>
 
@@ -289,7 +292,9 @@
                     {
                         <tr>
                             <td>
-                                @Html.DisplayFor(modelItem => item.ReferenceNumber)
+                                <a target="_blank" href="@Url.Action("ShowClaimDetails", "Claims", new { referenceNumber = item.ReferenceNumber })">
+                                    @Html.DisplayFor(modelItem => item.ReferenceNumber)
+                                </a>
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.StatusDate)
@@ -307,6 +312,9 @@
                                 @Html.DisplayFor(modelItem => item.ClaimSum)
                             </td>
                             <td>
+                                @Html.DisplayFor(modelItem => item.DecidedSum)
+                            </td>
+                            <td>
                                 @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
                                 @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
                                 @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
@@ -318,7 +326,7 @@
             }
             else
             {
-                <div class="padding-left-no-claim">
+                <div class="padding-left-no-claim font-size-16">
                     Det finns inga godkända ansökningar.
                 </div>
                 <br />
